--- a/src/Jili/FrontendBundle/Resources/views/header.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/header.html.twig
@@ -36,7 +36,7 @@ var urls={
 
 <div id="header">
     {% block header %}
-       {% include "::header1408.html.twig" %}
+       {% include "::menu.html.twig" %}
     {% endblock %}
 </div>
 
