--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -1,17 +1,21 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-商家活动</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}积粒网-商家活动 {% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/cpsActivity.css') }}" rel="stylesheet" type="text/css">
+{% endblock %}
+
+{% block javascript %}
+ <!-- [if lt IE9] -->
+<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
+<!-- [endif] -->
+
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/cpsActivity.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/analytics.js')}}" type="text/javascript"></script>
+
+
 <script type="text/javascript">
 $(document).ready(function() {
   var url = window.location.href;
@@ -61,8 +65,10 @@ $(document).ready(function() {
   {% endif %}
 });
 </script>
-</head><body>
-<div id="header"> {% include 'JiliApiBundle::header.html.twig' %} </div>
+
+{% endblock %}
+
+{% block body %}
 <div class="webArticle cpsActivity">
   <div class="topBtn"><a href="#"><img src="{{ asset('other/topBtn.jpg') }}" width="34" height="32"></a></div>
   <div class="classify">
@@ -103,6 +109,4 @@ $(document).ready(function() {
     </div>
   </div>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
