--- a/src/Jili/FrontendBundle/Resources/views/header.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/header.html.twig
@@ -8,6 +8,7 @@
 <link href="{{ asset('css1408/jl.ui.reset.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css1408/jl.ui.common.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css1408/jl.ui.home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/common.css') }} " rel="stylesheet" type="text/css">
 {% block stylesheet %}{% endblock %}
 
 <script src="{{ asset('js1408/jquery-1.10.2.js') }}" language="javascript"></script>
@@ -16,6 +17,7 @@
 
 <script src="{{ asset('js1408/checkin.js') }}" language="javascript"></script>
 <script src="{{ asset('js/signIn.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js140307/common.js') }}" language="javascript"></script>
 {% block javascript %}{% endblock %}
 
 <script>
