--- a/web/css/message.css
+++ b/web/css/message.css
@@ -60,6 +60,7 @@
 	font-size:18px;
 	font-weight:bold;
 	border-bottom:3px solid #eaeaea;
+	text-align:left;
 }
 .message h2 span{
 	color:#ff7114;
@@ -73,7 +74,7 @@
     margin: 20px 0 0;
     padding: 10px;
     text-align: center;
-    width: 912px;
+    width: 765px;
     position: relative;
 }
 .message article .screen{
