--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/offer99.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/offer99.html.twig
@@ -1,21 +1,18 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-体验广告</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}任务大厅二{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/aside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/adListNew.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/adListNew.js')}}" type="text/javascript"></script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+{% block body %}
 <div class="webArticle adList">
   <article>
     <!--  subnav  -->
@@ -30,6 +27,5 @@
     <iframe src='http://mini.offer99.com/index.php?action=offerlist&pid={{ offer99_com.pid }}&userid={{ app.session.get("uid") }}&alloffers=1&type=-1' style='width:928px;height:728px;' scrolling='no' frameborder='no' border='0' allowTransparency='true'></iframe>
   </article>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
+ 
