--- a/src/Jili/ApiBundle/Resources/views/Exchange/indentityConfirm.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/indentityConfirm.html.twig
@@ -1,16 +1,13 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-身份绑定</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}积粒网-身份绑定{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+{% endblock %}
+
+{% block javascript %}
 <script type="text/javascript">
 function change(){
 	var img1=document.getElementById("active");
@@ -24,9 +21,9 @@ function change(){
 	$("#form1").submit();
 }
 </script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+
+{% block body %}
 <div class="webArticle exchange">
 <form action="{{ path('_exchange_identityCardComfirm',{'type': type}) }}" method="post" id="form1">
   <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
@@ -50,7 +47,5 @@ function change(){
   <input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
   </form>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
 
