--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -1,15 +1,13 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-兑换中心</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}积粒网-兑换中心{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function(){
@@ -43,9 +41,8 @@ function alipayClick(){
         });	
 }
 </script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+{% block body %}
 <div class="webArticle exchange">
 <form method="post" name="exchangeForm" id="exchangeForm">
 	<div class="about">
@@ -79,6 +76,4 @@ function alipayClick(){
 	</div>
 </form>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
