--- a/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
@@ -1,15 +1,13 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-兑换手机费</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}积粒网-兑换手机费{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 var existMobile = "{{ existMobile }}";
@@ -74,9 +72,8 @@ function changePoint(){
   }
 }
 </script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+{% block body %}
 <div class="webArticle exchange">
 <form action="{{ path('_exchange_mobileInfo') }}" method="post" id="form1">
   <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
@@ -111,7 +108,5 @@ function changePoint(){
   <input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
   </form>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
 
