--- a/src/Jili/ApiBundle/Resources/views/Game/chick.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Game/chick.html.twig
@@ -1,13 +1,10 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-小鸡找米</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
-<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}积粒网-小鸡找米{% endblock %}
+
+{% block stylesheet %}
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 	//MDN PolyFil for IE8 (This is not needed if you use the jQuery version)
@@ -27,9 +24,9 @@
 		};
 	}
 </script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+
+{% block body %}
 {% if code %}
 <div style="text-align: center;padding: 100px 0;">
 <img src="{{ asset('images/error_support.gif')}}">
@@ -48,18 +45,5 @@
 </script>
 </div>
 {% endif %}
-{% include 'JiliApiBundle::footer.html.twig' %}
-<script type="text/javascript">
-$(document).ready(function(){
-	$(window).resize(function() {
-        resizeFooter()
-    });
-	var resizeFooter =function(){
-		$("footer").css("position","static");
-	} 	
-	resizeFooter();
-});
 
-</script>
-</body>
-</html>
+{% endblock %}
