--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -2,16 +2,10 @@
 {% block title %}积粒网-商家活动 {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/cpsActivity.css') }}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
- <!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
-
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/cpsActivity.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/analytics.js')}}" type="text/javascript"></script>
 
@@ -84,7 +78,7 @@ $(document).ready(function() {
     <ul class="activityAll">
       {% if busi %}
       {% for item in pagin %}
-      <li><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank"> <img src="{{ asset(item.activityImage) }}" width="470" height="200" alt="{{item.businessName}}"></a>
+      <li><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank"> <img src="{{ asset(item.activityImage) }}" width="420" height="168" alt="{{item.businessName}}"></a>
         <div class="more">
           <h4>{{ item.businessName }}</h4>
           <a class="moreBtn" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank">查看详情>></a></div>
@@ -98,7 +92,7 @@ $(document).ready(function() {
     
     <!--<div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>--> 
   </div>
-  <div style="width: 160px; top: 30px; right: 0; position: absolute; height: 600px;">
+  <div style="width: 132px; top: 20px; right: 0; position: absolute; height: 600px; background:#ccc;">
     <div> 
     <!-- 商家活动右侧一（160*90，纯文字） -->
     {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1553022" } %}
