--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -1,16 +1,14 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-任务历史</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}积粒网-任务历史{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/history.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
@@ -58,9 +56,8 @@ function addClass(type){
 	}
 }
 </script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% endblock %}
+{% block body %}
 <div class="webArticle history">
   <h2><span class="font18 corLightRed crumbTit">任务历史</span></h2>
   <aside>
@@ -135,8 +132,6 @@ function addClass(type){
     </div>
   </article>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
  
  
