--- a/src/Jili/ApiBundle/Resources/views/User/message.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/message.html.twig
@@ -1,16 +1,14 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>积粒网-站内消息</title>
-{% include 'JiliApiBundle::seo.html.twig' %}
-<!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
-<!-- [endif] -->
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}消息中心{% endblock %}
+
+{% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/message.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+{% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
@@ -103,10 +101,8 @@ function addClass(type){
 }
 
 </script>
-</head>
-<body>
-{% include 'JiliApiBundle::header.html.twig' %}
-
+{% endblock %}
+{% block body %}
 <div class="webArticle message">
   <h2><span class="font18 corLightRed crumbTit">消息中心</span></h2>
   <aside>
@@ -176,8 +172,6 @@ function addClass(type){
   </article>
 </div>
 
-{% include 'JiliApiBundle::footer.html.twig' %}
-</body>
-</html>
+{% endblock %}
  
  
