--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
@@ -1,4 +1,5 @@
-{% extends 'JiliEmarBundle::base140307.html.twig' %}
+{% extends 'JiliApiBundle::header.html.twig' %}
+{% block title %}商家列表{% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css140307/pageNumber.css') }} " rel="stylesheet" type="text/css">
@@ -13,15 +14,8 @@
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
 {% endblock %}
 
-{% block header %}
-  {% embed "::header.html.twig" %}
-    {% block search_box %}
-      {{ render( controller('JiliEmarBundle:Search:form', { 'rt': 1 })) }}
-    {% endblock %}
-  {% endembed %}
-{% endblock %}
 
-{% block page_main %}
+{% block body %}
      <div class="main w834 fl">
       {{ include( "JiliEmarBundle:Websites:shopList_category.html.twig") }}
 
