--- a/web/css/adListNew.css
+++ b/web/css/adListNew.css
@@ -2,7 +2,7 @@ aside {
     width:225px;
 }
 aside.offowAside{
-	width:380px;
+	width:267px;
 	margin-top:40px;
 }
 .adList{
@@ -76,31 +76,35 @@ aside.offowAside{
 .cpaMain .cpaAll{
 	background-color:#FFF;
 	border-radius:10px 10px 0 0;
-	padding:0px 20px 4px;
+	padding:0px 15px 4px;
 }
 .cpaMain .cpaAll .cpa{
-	height:111px;
+	height:95px;
 	border-bottom:1px solid #cccccc;
-	padding: 11px 0 30px;
+	padding: 20px 0 20px;
 	font-size:15px;
 }
 .cpaMain .cpaAll .cpa.last{
 	border:none;
 }
 .cpaMain .cpaAll .cpa dd{
-	width:200px;
+	width:115px;
 	float:left;
 	margin-right:10px;
 }
 .cpaMain .cpaAll .cpa dt{
-	width:127px;
-	text-align:center;
+	width:78px;
 	color:#ee691e;
 	font-weight:bold;
-	padding-top:15px;
+	padding:0 0 0 10px;
 	display: inline-block;
 }
-.cpaMain .cpaAll .cpa dt .title{ font-weight:normal; text-align:left;}
+.cpaMain .cpaAll .cpa dt .title{ 
+	font-weight:normal; 
+	height: 38px;
+	overflow: hidden;
+	text-align:left;
+}
 .cpaMain .cpaAll .cpa dt .joinBtn{
 	background-color: #FDCE6F;
     border-radius: 5px;
@@ -108,7 +112,7 @@ aside.offowAside{
     display: inline-block;
     font-size: 13px;
     margin-top: 3px;
-    padding: 10px 36px;
+    padding: 5px 10px;
 }
 .cpaMain .cpaAll .cpa dt .joinBtn:hover{
 	text-decoration:none;
