--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -63,7 +63,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #userbar li a{ background:url(../images140307/iconImage.png) no-repeat; cursor:pointer;}
 #userbar li a.message{ padding-left: 20px; background-position: left 3px;}
 #userbar li a.personal{ background-position: 53px -23px; padding-right: 10px;}
-#userbar  #userFrame {background-color: #FFFFFF;border: 1px solid #e0e0e0; display: none;left: 0;position: absolute;top: 30px; width: 100%; z-index: 8000;}
+#userbar  #userFrame {background-color: #FFFFFF;border: 1px solid #e0e0e0; display: none;left: 0;position: absolute;top: 30px; width: 135px; text-align:left; z-index: 8000;}
 #userbar  #userFrame .userInfo { background:url("../images140307/iconImage.png") no-repeat scroll 10px -447px; border-bottom: 1px solid #EEEEEE; margin-bottom: 5px; padding: 5px 0 5px 33px;}
 #userbar  #userFrame ul.menu li {line-height: 230%;float:none;}
 #userbar  #userFrame ul.menu li a {color: #666666; display: block; text-indent: 15px; width: 100%;background:none;}
