--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="keywords" content="»ıÁ£,»ıÁ£Íø,91»ıÁ£Íø,·µÀûÍø,·µÀû,·µÏÖ,³¬¼¶·µ,¹ºÎï·µÀû,ÉÌ³Ç·µÀû,ÌÔ±¦,ÌÔ±¦·µÀû,¾©¶«·µÀû,»ı·Ö,»ı·ÖÉÌ³Ç,Íø¹º·µÀû,91jili.com">
-<meta name="description" content="»ıÁ£Íø£¬ÇáËÉ»ıÃ×Á££¬¿ìÀÖ»»½±Àø£¡ÓµÓĞÓÎÏ·ÌåÑé£¬ÌåÑé¹ã¸æ£¬¹ºÎï·µÀû£¬ÉÌ¼Ò»î¶¯¼¸´ó°å¿é£¬ÍøÕ¾µÄ»õ±ÒÎªÃ×Á££¬ÔÚÏíÊÜÖÚ¶àÉÌ³Ç×îÓÅ»İ¼Û¸ñÍ¬Ê±»¹¿É´Ó»ıÁ£Íø»ñµÃ²»Í¬±ÈÂÊµÄÏÖ½ğ½±Àø£¡»ıÁ£ÍøÈÃÄãÊ¡µÃ¶à£¬×¬µÃÒ²¸ü¶à£¡">
-<title>{% block title %}»ıÁ£Íø-Ê×Ò³ ÇáËÉ»ıÃ×Á££¬¿ìÀÖ»»½±Àø£¡{% endblock %}</title>
+<meta name="keywords" content="ç§¯ç²’,ç§¯ç²’ç½‘,91ç§¯ç²’ç½‘,è¿”åˆ©ç½‘,è¿”åˆ©,è¿”ç°,è¶…çº§è¿”,è´­ç‰©è¿”åˆ©,å•†åŸè¿”åˆ©,æ·˜å®,æ·˜å®è¿”åˆ©,äº¬ä¸œè¿”åˆ©,ç§¯åˆ†,ç§¯åˆ†å•†åŸ,ç½‘è´­è¿”åˆ©,91jili.com">
+<meta name="description" content="ç§¯ç²’ç½‘ï¼Œè½»æ¾ç§¯ç±³ç²’ï¼Œå¿«ä¹æ¢å¥–åŠ±ï¼æ‹¥æœ‰æ¸¸æˆä½“éªŒï¼Œä½“éªŒå¹¿å‘Šï¼Œè´­ç‰©è¿”åˆ©ï¼Œå•†å®¶æ´»åŠ¨å‡ å¤§æ¿å—ï¼Œç½‘ç«™çš„è´§å¸ä¸ºç±³ç²’ï¼Œåœ¨äº«å—ä¼—å¤šå•†åŸæœ€ä¼˜æƒ ä»·æ ¼åŒæ—¶è¿˜å¯ä»ç§¯ç²’ç½‘è·å¾—ä¸åŒæ¯”ç‡çš„ç°é‡‘å¥–åŠ±ï¼ç§¯ç²’ç½‘è®©ä½ çœå¾—å¤šï¼Œèµšå¾—ä¹Ÿæ›´å¤šï¼">
+<title>{% block title %}ç§¯ç²’ç½‘-é¦–é¡µ è½»æ¾ç§¯ç±³ç²’ï¼Œå¿«ä¹æ¢å¥–åŠ±ï¼{% endblock %}</title>
 <link href="{{ asset('css1408/jl.ui.reset.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css1408/jl.ui.common.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css1408/jl.ui.home.css') }} " rel="stylesheet" type="text/css">
