--- a/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
@@ -4,7 +4,7 @@
         <div class="shopActImg"><img src="{{ asset(item.activityImage) }}" width="420" height="168" alt="{{ item.businessName }}" title="{{ item.businessName }}"/></div>
         <div class="shopActInfo">
             <p><strong>{{ item.title }}</strong>{{ item.businessName}}</p>
-            <div class="publicAttention"><strong>12840</strong>人关注</div>
+            <div class="publicAttention"><strong>{{ item.click}}</strong>人关注</div>
             <div class="linkBtn"><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank" title="去看看">去看看<span class="arrow"></span></a></div>
         </div>
     </div>
