--- a/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
@@ -6,7 +6,7 @@
       <li>
         <dt><a target="_blank" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2"><img src="{{ asset(item.activityImage) }}" alt="{{ item.businessName }}"/></a></dt>
         <dd>
-		  <p class="discount">{{ item.title }}<br />{{ item.activityDescription}}</p>
+		  <p class="discount">{{ item.title }}</p>
           <p class="title">{{ item.businessName}}</p>
           <p class="btn"><a class="goActivity" target="_blank" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2">去看看</a></p>
         </dd>
