--- a/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_form.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_form.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('jili_emar_websites_shoplistsearch',app.request.query.all) }}" method="POST" class="shopSearch" >
+<form action="{{ path('jili_emar_websites_shoplistsearch',app.request.query.all) }}" method="POST" class="shopSearch" _lpchecked="1">
    {{ form_widget(form.keyword, { 'attr': { 'class': 'shopSearchInput', 'palceholder': '该条件下查找'}}) }}
    {{ form_rest(form) }}
     <div class="shopSearchSubmit" >
