add similar mall and fix

--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -184,6 +184,7 @@ $(document).ready(function(){
   </section>
   <div class="bottom"><img src="{{ asset('images/userInfoBottom.png') }}"></div>
 </div>-->
-    {% if app.session.has('uid') %}
+   <!-- {% if app.session.has('uid') %}
     	{{ render(controller('JiliApiBundle:Top:checkIn' ) ) }}{# 签到 #}
-	{% endif %}
+	{% endif %}-->
+ 
