--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -19,19 +19,19 @@
             <ul>
                 <li class="ad1">
                     <a href="#"><img src="{{ asset('images1408/ad101.jpg') }}" width="116" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><strong class="globRed">54214</strong><span class="lightGray">米粒</span></a>
+                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
                 </li>
                 <li class="ad1">
                     <a href="#"><img src="{{ asset('images1408/ad101.jpg') }}" width="116" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><strong class="globRed">54214</strong><span class="lightGray">米粒</span></a>
+                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
                 </li>
                 <li class="ad1">
                     <a href="#"><img src="{{ asset('images1408/ad101.jpg') }}" width="116" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><strong class="globRed">54214</strong><span class="lightGray">米粒</span></a>
+                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
                 </li>
                 <li class="ad2">
                     <a href="#"><img src="{{ asset('images1408/ad201.jpg') }}" width="94" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><strong class="globRed">54214</strong><span class="lightGray">米粒</span></a>
+                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
                 </li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div style="background: none; padding: 110px 0 0;"><img src="{{ asset('images1408/baidu270.jpg') }}"></div>
+        <div style="background: none; padding: 121px 0 0;"><img src="{{ asset('images1408/baidu270.jpg') }}"></div>
         <div class="notice mt10 shadowGlob">
             <h2>最新公告</h2>
             {{ render(controller('JiliApiBundle:Top:callboard' ) ) }}
