--- a/src/Jili/EmarBundle/Resources/views/Product/recommendByWeb.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/recommendByWeb.html.twig
@@ -9,9 +9,8 @@
             </a>
           </dt>
           <dd>
-            <p class="corGlobGray textLimit">{{ row.p_name}}</p>
+            <p class="corGlobGray textLimit">【{{ row.web_name }}】{{ row.p_name}}</p>
             <p class="price">¥{{ row.cur_price }}<em class="fontNormal corLightGray">{{ row.ori_price }}</em></p>
-            <p class="shop">{{ row.web_name }}</p>
           </dd>
         </li>
     {% endfor %}
