--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -12,7 +12,7 @@
                 <div class="shopActive">
                     <div class="shopMask"></div>
                     <div class="shopBtns">
-                        <a href="{{  path('jili_emar_websites_detail', {'wid': row.webId }) }}" title="返利详情">返利详情</a>
+                        <a href="{{  path('jili_emar_websites_detail', {'wid': row.webId }) }}" title="返利详情" target="_blank">返利详情</a>
                         <a href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode  }}" target="_blank" title="直接购物">直接购物</a>
                     </div>
                 </div>
@@ -27,10 +27,10 @@
 	$(function(){
             $('.shopSlider li').hover(function(){
                 var index = $('.shopSlider li').index(this);
-                $('.shopActive').eq(index).slideDown('fast');
+                $('.shopActive').eq(index).stop(true,true).delay(800).slideDown(100);
             },function(){
 				var index = $('.shopSlider li').index(this);
-                $('.shopActive').eq(index).slideUp('fast');
+                $('.shopActive').eq(index).stop(true,true).slideUp(100);
             });
 	});
 </script>
