--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -8,36 +8,37 @@
 <link href="{{ asset('css140307/screen.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block javascript %}
-<script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
-<script src="{{ asset('js140307/shopList.js') }}" language="javascript"></script>
-<script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
+{% block javascript %} 
+<script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script> 
+<script src="{{ asset('js140307/shopList.js') }}" language="javascript"></script> 
+<script src="{{ asset('js140307/screen.js') }}" language="javascript"></script> 
 <script type="text/javascript">
 	  $(document).ready(function() {
 		for(i=3; i<9; i+=4){
 		  $(".searchRecommend li").eq(i).css("margin-right", "0");
 		  }
 	  });
-</script>
+</script> 
 {% endblock %}
 
 {% block body %}
-  <div class="main w834 fl">
+<div class="main w834 fl"> {# include( "JiliEmarBundle:Websites:shopSearch_category.html.twig") #}
+  
+  {{ include( "JiliEmarBundle:Websites:shopSearch_page.html.twig") }} </div>
+<!-- eof main-->
 
-      {# include( "JiliEmarBundle:Websites:shopSearch_category.html.twig") #}
+<div class="sidebar fr" style=" width: 155px;">
+  <div class="busiSec">
+    <h3 class="busiSecTit">同类商城推荐</h3>
+    <div class="busiSecBd">
+      <ul id="mallsRecommend">
+        <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/11/6374807b8cedd9dc6e2e0afb6e3949b5.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
+        <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/03/e16f77e4eeb0b16b969ba587d63d481c.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
+        <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/03/3df93618a3d8ae634d347de7b2e28ac1.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
+	  </ul>
+    </div>
+  </div>
+</div>
+<!-- eof sidebar --> 
 
-      {{ include( "JiliEmarBundle:Websites:shopSearch_page.html.twig") }}
-
-      {{ render(controller('JiliEmarBundle:Ghs:promotion', {'tmpl':'search','max': 8, 'p':1} ))  }}
-
-  </div><!-- eof main-->
-
-  <div class="sidebar fr" style=" width: 155px;">
-  	<div>
-		<!--返利详情右侧一（纯文字）（改）--> 
-        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1645902" } %}
-	</div>
-  </div><!-- eof sidebar -->
-
-{% endblock %}
-
+{% endblock %} 
