--- a/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_by_the_first letter.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_by_the_first letter.html.twig
@@ -11,6 +11,7 @@
        $(function(){
           var tita = $(".shopR .tit a")
           tita.click(function(){
+			  $(".shopR .tit a:first-child").addClass("current");
              $(this).addClass("current").siblings().removeClass("current");
           });
        });
