--- a/web/css140307/commodity834.css
+++ b/web/css140307/commodity834.css
@@ -1,17 +1,17 @@
-ul.commodityUl,ul.commodityByWeb{ background-color:#FFF; border-top:3px solid #e94d41; padding:0px 0 15px 0px;}
+ul.commodityUl,ul.commodityByWeb{ background-color:#FFF; border-top:2px solid #ededed; padding:0px 0 15px 0px;}
 ul.commodityUl.btbn{ border-top:none;}
 ul.commodityUl li,ul.commodityByWeb li{width:269px; height: 278px; border: 2px solid #fff; float: left; padding:16px 18px 0;}
-ul.commodityUl li{height: 265px; padding: 10px 18px 0;}
+ul.commodityUl li{height: 250px; padding: 10px 18px 0;}
 ul.commodityUl li:hover,ul.commodityByWeb li:hover{border: 2px solid #C40000; transition: all 0.3s ease 0s;} 
 ul.commodityUl li dt a img{ width:269px; height:auto;}
-ul.commodityUl li dd{font-size:12px; padding:0 0 10px 0; color:#999999; position:relative;}
+ul.commodityUl li dd{font-size:12px; padding:8px 0 10px 0; color:#999999; position:relative;}
 ul.commodityUl li dd span{ line-height:150%; width:100%; text-align:left;}
 ul.commodityUl li dd span.detail{ margin-top:8px;}
-ul.commodityUl li dd span.price,ul.commodityByWeb li dd .price{ color: #e94d41; font-size: 24px;font-weight: 700; display:block; line-height: 115%;}
+ul.commodityUl li dd span.price,ul.commodityByWeb li dd .price{ color: #e94d41; font-size: 14px;font-weight: 700; display:block;}
 ul.commodityUl li dd span.price em{text-decoration: line-through; vertical-align: 8px; margin-left:5px;}
 ul.commodityUl li dd .buyBtn{background-color: #e94d41; border-radius: 3px; color: #FFFFFF; font-size: 12px; padding: 5px 15px; width: 50px; bottom: -65px; *bottom:48px; display: none; position: absolute; right: 0;}
 ul.commodityUl li dd .buyBtn a{ color:#fff;}
-ul.commodityByWeb li{ width:237px; padding: 20px 18px 10px;}
+ul.commodityByWeb li{ width:223px; padding: 10px 18px 10px;bottom: -2px;position: relative;}
 ul.commodityByWeb li dt a img{height: 200px; width: auto;}
 ul.commodityByWeb li dt,ul.co	mmodityByWeb li dd{ text-align:center;}
 ul.commodityByWeb li dd{ text-align:center;}
