--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -5,6 +5,7 @@
 .fr{float:right;}
 .tl{ text-align:left;}
 .tr{ text-align:right;}
+.w154{ width:154px;}
 .w204{ width:204px;}
 .w300{ width:300px;}
 .w280{ width:280px;}
@@ -37,7 +38,7 @@ strong, b{font-weight: bold;}
 .corLightGray2{ color:#bbb;}
 .corDarkGray{ color:#666;}
 .corGlobGray{ color:#333;}
-.corGlobRed{ color:#e94d41;}
+.corGlobRed{ color:#f75232;}
 .corGlobBlue{ color:#3598db;}
 .corDarkBlue{ color:#1588e5;}
 .corBrightBlue{ color: #32A5F5;}
@@ -112,7 +113,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .blackBg { background-color: #000000; display: none; height: 100%; left: 0; position: absolute; top: 0; width: 100%; z-index: 9998; opacity: .5; filter: alpha(opacity=50);/*IE*/ *zoom: 1;  }
 
 /* sidebar process */		
-.sidebar .rebateProcess{ width:100%; padding:10px; background:#fff;}
-.sidebar .rebateProcess h3{ margin: 3px 0 0 10px; font-size:16px;}
-.sidebar .rebateProcess img{ padding: 22px 0 15px 36px;}
+.sidebar .rebateProcess{ width:100%; background:#fff; padding-bottom: 35px;}
+.sidebar .rebateProcess h3{ margin: 9px 0 22px 16px; font-size:16px; text-align:left;} 
 /* sidebar process / */
