--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'JiliFrontendBundle::header.html.twig' %}
+{% extends 'JiliFrontendBundle::base.html.twig' %}
 {% block title %}积粒网-登录{% endblock %}
 
 {% block stylesheet %}
