--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList_category.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList_category.html.twig
@@ -1,7 +1,7 @@
 {% set wcatid_q = app.request.query.get('wcat','') %}
 <ul class="tabnav">
             
-    <li {% if wcatid_q is defined and wcatid_q is same as("0") %} class="active" {% endif %}><a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'wcat':0,"q":"", "p":1,"t":"" })) }}">热门商家</a></li>
+    <li {% if wcatid_q is not defined or wcatid_q|length == 0 or wcatid_q == 0 %} class="active" {% endif %}><a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'wcat':0,"q":"", "p":1,"t":"" })) }}">热门商家</a></li>
 
 {% for wcatid,cat in categories %}
 
