首页网站改版 #399

--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -19,7 +19,7 @@
 <script src="{{ asset('js/bottom.js') }}" language="javascript"></script>
 {% endblock %}
 
-{% block page_main %}
+{% block body %}
 <div class="webArticle login">
   <div class="img"><img src="{{ asset('images/loginImage.png') }}" width="436" height="423"></div>
   <form action="{{ path('_user_login') }}" method="post" name="form1" id="form1">
