首页 体验广告 #420

--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -16,24 +16,7 @@
             {{ render(controller('JiliApiBundle:Top:advertiseBanner' ) ) }}
         </div>
         <div class="adTop">
-            <ul>
-                <li class="ad1">
-                    <a href="#"><img src="{{ asset('images1408/ad101.jpg') }}" width="116" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
-                </li>
-                <li class="ad1">
-                    <a href="#"><img src="{{ asset('images1408/ad101.jpg') }}" width="116" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
-                </li>
-                <li class="ad1">
-                    <a href="#"><img src="{{ asset('images1408/ad101.jpg') }}" width="116" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
-                </li>
-                <li class="ad2">
-                    <a href="#"><img src="{{ asset('images1408/ad201.jpg') }}" width="94" height="78" alt="" title=""></a>
-                    <a class="pointNum" href="#"><span class="globRed">54214</span><span class="lightGray">米粒</span></a>
-                </li>
-            </ul>
+            {{ render(controller('JiliFrontendBundle:Home:adExperience' ) ) }}
         </div>
         <div class="hotShops mt10">
             {{ render(controller('JiliEmarBundle:Websites:hot' , { 'max': 12, 'tmpl': 'top' } ) ) }}{# 返利商城 #}
