--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -91,7 +91,7 @@ $(document).ready(function() {
     <div style="width: 100%; display: inline-block;">{{ knp_pagination_render(pagin) }}</div>
     <!--<div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>--> 
   </div>
-  <div>
+  <div style="width:132px; height:auto; position:absolute; top:0; right:0; ">
     <!-- 商家活动 右侧一 纯文字（改） -->
     {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1644029" } %}
   </div>
