--- a/web/css140307/searchShop.css
+++ b/web/css140307/searchShop.css
@@ -23,6 +23,7 @@
 	height: 50px;
 	margin-bottom: 15px;
 	overflow: hidden;
+	text-align:left;
 }
 .searchShopUl .dd .shopMore {
 	text-align: right;
@@ -49,11 +50,9 @@
 	margin-top: 10px;
 }
 .searchShopUl a.buy {
-	background-color: #63B8F0;
-	border-radius: 5px;
+	background-color: #4a8ef3;
 	color: #FFFFFF;
 	display: inline-block;
-	font-size: 14px;
 	padding: 3px 10px;
 }
 /* similar mall */
