--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -3,7 +3,7 @@
         <ul class="clearfix">
             {% for row in websites %}
             <li>
-                <div class="shopLogo"><img src="{{ row.logoUrl }}" width="76" height="40" alt="{{ row.webName }}" title="{{ row.webName }}"/></div>
+                <div class="shopLogo"><img src="{{ row.logoUrl }}" width="76" height="40" alt="{{ row.webName }}"/></div>
                 {% if row.commission > 0 %}
                 <p>最高返{{ row.commission }}%</p>
                 {% else %}
@@ -12,8 +12,8 @@
                 <div class="shopActive">
                     <div class="shopMask"></div>
                     <div class="shopBtns">
-                        <a href="{{  path('jili_emar_websites_detail', {'wid': row.webId }) }}" title="返利详情" target="_blank">返利详情</a>
-                        <a href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode  }}" target="_blank" title="直接购物">直接购物</a>
+                        <a class="toMore" href="{{  path('jili_emar_websites_detail', {'wid': row.webId }) }}" title="返利详情">返利详情</a>
+                        <a class="toBuy" href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode  }}" target="_blank" title="直接购物">直接购物</a>
                     </div>
                 </div>
             </li>
@@ -27,10 +27,10 @@
 	$(function(){
             $('.shopSlider li').hover(function(){
                 var index = $('.shopSlider li').index(this);
-                $('.shopActive').eq(index).stop(true,true).delay(800).slideDown(100);
+                $('.shopActive').eq(index).stop(true,true).delay(400).slideDown(20);
             },function(){
 				var index = $('.shopSlider li').index(this);
-                $('.shopActive').eq(index).stop(true,true).slideUp(100);
+                $('.shopActive').eq(index).stop(true,true).slideUp(20);
             });
 	});
 </script>
