--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
@@ -16,7 +16,7 @@
 
 
 {% block body %}
-<div class="main clearfix">
+<div class="main w1000 clearfix">
 	<div class="shopL fl w192">
         {% include 'JiliEmarBundle:Websites:shoplist_search_form.html.twig' with {'form': filter_form } %}
         {{ include( "JiliEmarBundle:Websites:shopList_category.html.twig") }}
