--- a/web/css1408/jl.ui.home.css
+++ b/web/css1408/jl.ui.home.css
@@ -14,6 +14,7 @@ a.more{
 	font-size: 12px;
 	font-weight: normal;
     line-height: 40px;
+	font-family: \5b8b\4f53;
 }
 .focusPic{
 	padding-left: 200px;
@@ -71,6 +72,7 @@ a.more{
 	padding: 10px;
 	border: 1px solid #eaeae8;
 	background-color: #fff;
+	margin-top: 10px;
 }
 .shopSlider{
 	position: relative;
@@ -126,27 +128,29 @@ a.more{
 	line-height:28px;
 }
 .shopActive{
-	display:none;
 	position: absolute;
 	z-index: 100;
+	width: 120px;
+	height: 70px;
 	left: 0;
 	bottom: 0;
+	display:none;
 }
 .shopActive .shopMask{
-	width: 120px;
+	width: 119px;
 	height: 70px;
 	/*background-color: rgb(255, 255, 255);*/
     opacity: .8;
     filter: alpha(opacity = 80);
 	border:1px solid #fab627;
-	position: absolute;
-	top: -47px;
 }
 .shopActive .shopBtns{
 	width: 100%;
 	height: 22px;
 	overflow: hidden;
-	margin-left: 1px;
+	position: absolute;
+	bottom: -2px;
+	left:0;
 }
 .shopActive .shopBtns a, .shopActInfo .linkBtn a, span.arrow, a.register{
     display: inline-block;
@@ -154,15 +158,18 @@ a.more{
     *zoom: 1;
 }
 .shopActive .shopBtns a{
-	width: 57px;
+	width: 60px;
 	text-align: center;
 	line-height: 22px;
+	float: left;
 	color: #fff;
 	background-color: #fab627;
-	cursor:pointer;
-	position:relative;
-	z-index:9999;
+	cursor: pointer;
+	position: relative;
+	z-index: 9999;
 }
+.shopActive .shopBtns a.toMore{ background:#9ccc3d;}
+.shopActive .shopBtns a.toBuy{ background:#f9b036;}
 .shopSlider li.active .shopActive{
 	display: block;
 }
@@ -393,6 +400,10 @@ div.notice, div.rank{
 	z-index: 1;
 	padding-bottom: 13px;
 }
+div.notice{ 
+	margin-top: 3px;
+	padding: 5px 0 28px 15px;
+}
 .notice .mask{
     height: 72px;
 }
@@ -406,11 +417,15 @@ div.notice, div.rank{
     color: #ea4c11;
     text-decoration: none;
 }
-.notice .pageNumber, div.rank .menu{
+.notice .pageNumber,div.rank .menu{
 	position: absolute;
 	z-index: 50;
 	top: 10px;
 	right: 9px;
+}
+.notice .pageNumber{
+	top: 14px;
+	right: 14px;
 }
 .notice .pageNumber span{
 	padding: 0 5px;
